--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--    <link href="https://fonts.googleapis.com/css?family=Lemonada&display=swap" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Vidaloka&display=swap" rel="stylesheet" />
-    <title>VeraVincenzo 2020</title>
+    <title>Vera Vincenzo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
